# canyon-notifier

./: .flake8  .gitignore  README.md  article.md  pyproject.toml  update.py
.github/workflows/: deploy.yml  linters.yml  tests.yml
app/: __init__.py  bike_model.py  bot.py  bot_runner.py  bot_subscription.py  catalog_updater.py  hello.py  models.py  settings.py  storage.py  subscription_notifier.py  update.py
app/bot/: __init__.py  buttons.py  catalog_all_sizes.py  catalog_handlers.py  catalog_one_size.py  common_handlers.py  subscription_handlers.py
app/catalog/: __init__.py  available_bike_list_operations.py  catalog_operations.py
app/storage/: __init__.py  available_bike_list.py  catalog.py  conection.py  subscription.py
deploy/: supervisor.conf
docs/: notes.md
etc/: nginx-example.conf  supervisor-example.conf
tests/: conftest.py  test_bot.py  test_catalog_updater_main.py  test_get_canyon_catalog.py  test_get_canyon_catalog_html.py  test_hello_main.py  test_main.py  test_normalize_bike_id.py  test_parse_canyon_catalog.py  test_subscription_notifier.py  test_update_catalog.py
tests/bot/: test_bot.py
tests/test_subscription_notifier/: test_get_notification_bikes.py  test_main.py  test_send_subscription_message.py
tests/tests_catalog_updater/: test_create_bike_id.py  test_get_canyon_catalog.py  test_get_canyon_catalog_html.py  test_get_new_available_bikes.py  test_main.py  test_normalize_bike_id.py  test_parse_canyon_catalog.py  test_update_available_bike_list.py  test_update_catalog.py
tests/tests_storage/: test_clear_catalog.py  test_get_catalog.py  (+9 more)
(+24 files in other folders)
