[tool.poetry]
name = "canyon-notifier"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
httpx = "^0.22.0"
lxml = "^4.8.0"
cssselect = "^1.1.0"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
wemake-python-styleguide = "^0.16.1"
pytest = "^7.1.2"

[tool.mypy]
python_version = 3.9
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
