[tool.poetry]
name = "canyon-notifier"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
httpx = "0.23.0"
lxml = "^4.8.0"
cssselect = "^1.1.0"
aiogram = "^2.20"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
ujson = "^5.3.0"
uvloop = "^0.20.0"
redis = "^7.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^0.950"
wemake-python-styleguide = "^0.16.1"
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.7.0"

[tool.mypy]
python_version = 3.9
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 125
profile = "black"
